--- a/index.html
+++ b/index.html
@@ -599,38 +599,38 @@
     </div>
 
     <div id="preload">
-      <img src="img/me.png" />
+      <img src="img/me.jpg" />
       <img src="img/filler.jpg" />
-      <img src="img/filler.png" />
-      <img src="img/thumb-1.png" />
-      <img src="img/thumb-2.png" />
-      <img src="img/thumb-3.png" />
-      <img src="img/thumb-4.png" />
+      <img src="img/filler.jpg" />
+      <img src="img/thumb-1.jpg" />
+      <img src="img/thumb-2.jpg" />
+      <img src="img/thumb-3.jpg" />
+      <img src="img/thumb-4.jpg" />
       <img src="img/thumb-5.jpg" />
-      <img src="img/thumb-6.png" />
-      <img src="img/thumb-7.png" />
-      <img src="img/thumb-8.png" />
+      <img src="img/thumb-6.jpg" />
+      <img src="img/thumb-7.jpg" />
+      <img src="img/thumb-8.jpg" />
       <img src="img/blog-1.jpg" />
       <img src="img/blog-2.jpg" />
       <img src="img/blog-3.jpg" />
-      <img src="img/slides/bertamlivery-0.png" />
-      <img src="img/slides/bertamlivery-1.png" />
-      <img src="img/slides/bertamlivery-2.png" />
-      <img src="img/slides/diabetic-0.png" />
-      <img src="img/slides/diabetic-1.png" />
-      <img src="img/slides/diabetic-2.png" />
-      <img src="img/slides/dpein-0.png" />
-      <img src="img/slides/dpein-1.png" />
-      <img src="img/slides/dpein-2.png" />
-      <img src="img/slides/gandaprint-0.png" />
-      <img src="img/slides/gandaprint-1.png" />
-      <img src="img/slides/gandaprint-2.png" />
-      <img src="img/slides/invoicemudah-0.png" />
-      <img src="img/slides/invoicemudah-1.png" />
-      <img src="img/slides/invoicemudah-2.png" />
-      <img src="img/slides/tracer-0.png" />
-      <img src="img/slides/tracer-1.png" />
-      <img src="img/slides/tracer-2.png" />
+      <img src="img/slides/bertamlivery-0.jpg" />
+      <img src="img/slides/bertamlivery-1.jpg" />
+      <img src="img/slides/bertamlivery-2.jpg" />
+      <img src="img/slides/diabetic-0.jpg" />
+      <img src="img/slides/diabetic-1.jpg" />
+      <img src="img/slides/diabetic-2.jpg" />
+      <img src="img/slides/dpein-0.jpg" />
+      <img src="img/slides/dpein-1.jpg" />
+      <img src="img/slides/dpein-2.jpg" />
+      <img src="img/slides/gandaprint-0.jpg" />
+      <img src="img/slides/gandaprint-1.jpg" />
+      <img src="img/slides/gandaprint-2.jpg" />
+      <img src="img/slides/invoicemudah-0.jpg" />
+      <img src="img/slides/invoicemudah-1.jpg" />
+      <img src="img/slides/invoicemudah-2.jpg" />
+      <img src="img/slides/tracer-0.jpg" />
+      <img src="img/slides/tracer-1.jpg" />
+      <img src="img/slides/tracer-2.jpg" />
     </div>
   </body>
 </html>
