--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <script src="scripts/pt.min.js"></script>
     <script src="scripts/index.js"></script>
     <script src="scripts/modal.js"></script>
-    <script src="scripts/typing.js"></script>
+    <!--<script src="scripts/typing.js"></script>-->
 
   </head>
   <body>
