--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <div class="active page-link" dest="home">home</div>
               <div class="page-link" dest="about">about</div>
               <div class="page-link" dest="portfolio">portfolio</div>
-              <!-- <div class="page-link" dest="blog">blog</div>-->
+              <div class="page-link" dest="blog">blog</div>
               <div class="page-link" dest="contact">contact</div>
             </div>
             <i class="mdi mdi-menu"></i>
@@ -402,7 +402,7 @@
       </section>
 
       <!-- BLOG -->
-      <!--<section id="blog">
+      <section id="blog">
         <div class="container flex">
           <div class="header waypoint" data-animation="slide-in-left">BLOG</div>
           <div
@@ -503,7 +503,7 @@
             </div>
           </div>
         </div>
-      </section> -->
+      </section> 
 
       <!-- CONTACT -->
       <section id="contact">
